new files/migrated database

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-deepgram-sdk
-openai
-python-dotenv
-pydub
-faster-whisper
-torch
-torchaudio
-tqdm>=4.65.0
-whisperx
+deepgram-sdkdeepgram-sdk
+
+openaiopenai
+
+python-dotenvpython-dotenv
+
+pydubpydub
+
+faster-whisperfaster-whisper
+
+torchtorch
+
+torchaudiotorchaudio
+
+tqdm>=4.65.0tqdm>=4.65.0
+
+whisperxwhisperx
+
+googlemapsgooglemaps
+
+psutilpsutil
+
+flask
+flask-socketio
+pandas
+requests
+sqlite3
+pathlib
