--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,34 @@
-deepgram-sdkdeepgram-sdk
+# Audio Processing and Transcription
+deepgram-sdk>=3.2.0
+openai>=1.3.0
+torch>=2.0.0
+torchaudio>=2.0.0
+whisper>=20231117
+pydub>=0.25.0
 
-openaiopenai
+# Web Framework
+flask>=2.3.0
+flask-socketio>=5.3.0
 
-python-dotenvpython-dotenv
+# Google Services
+googlemaps>=4.10.0
 
-pydubpydub
+# LLM and AI
+ollama>=0.1.7
 
-faster-whisperfaster-whisper
+# Data Processing
+pandas>=2.0.0
+rapidfuzz>=3.0.0
 
-torchtorch
+# Database (sqlite3 is built-in to Python)
+# No external package needed for sqlite3
 
-torchaudiotorchaudio
+# Utilities
+python-dotenv>=1.0.0
+requests>=2.31.0
+tenacity>=8.2.0
 
-tqdm>=4.65.0tqdm>=4.65.0
+# System utilities  
+psutil>=5.9.0
 
-whisperxwhisperx
-
-googlemapsgooglemaps
-
-psutilpsutil
-
-flask
-flask-socketio
-pandas
-requests
-sqlite3
-pathlib
+# Note: pathlib is built-in to Python 3.4+, no external package needed
